@@ -23,27 +23,33 @@
 
 package org.makumba.util;
 import java.util.*;
+import java.lang.ref.WeakReference;
 
 /** Keeps a number of identical creation-expensive resources. Avoids resource re-creation/deletion
  * @author cristi
  */
 public abstract class ResourcePool
 {
+  // a stack of resources
   Stack stack= new Stack();
-    
-    // we keep a reference to all our resources here
-    Vector all= new Vector();
+
+  // a parallel stack that keeps the time when each resource was last used
+  Stack timeStack= new Stack();
+
+  // we keep a reference to all our resources to prevent them from being finalized when they are out of the pool
+  Vector all= new Vector();
 
   /** re-define this method to express how to create a resource */
   public abstract Object create() throws Exception;
 
-    Object createAndCount() throws Exception
-    {
-	Object o= create();
-	all.addElement(o);
-	org.makumba.MakumbaSystem.getMakumbaLogger("util.pool").fine("pool size: "+ all.size());
-	return o;	
-    }
+  /** create a new resource */
+  Object createAndCount() throws Exception
+  {
+    Object o= create();
+    all.addElement(o);
+    org.makumba.MakumbaSystem.getMakumbaLogger("util.pool").fine("pool size: "+ all.size());
+    return o;	
+  }
 
   /** initialize the pool with n resources */
   public void init(int n) throws Exception
@@ -58,7 +64,8 @@ public abstract class ResourcePool
     synchronized(stack)
       {
 	if(stack.isEmpty())
-	    return createAndCount();
+	  return createAndCount();
+	timeStack.pop();
 	return stack.pop();
       }
   }
@@ -74,12 +81,96 @@ public abstract class ResourcePool
     synchronized(stack)
       {
 	stack.push(o); 
+	timeStack.push(new Date());
       }
   }
   
-  public void reset()
-  {
-    stack= new Stack();
-    all= new Vector();
+  /** a weak reference to ourselves, for usage by foreign objects */
+  WeakReference poolRef= new WeakReference(this);
+  
+  /** clear all resource containers. if we have a stale prevention thread, we interrupt it */
+  public void close(){
+    poolRef.clear();
+    synchronized(stack){
+      if(stalePreventionThread!=null)
+	stalePreventionThread.interrupt();
+      stack.clear();
+      timeStack.clear();
+      all.clear();
+    }    
+  }
+  
+  protected void finalize(){ close(); }
+
+  // stale is the time after which a resource becomes old and invalid
+  // sleeping is the stale prevention thread sleeping period
+  // typically sleeping= stale/2
+  long sleeping, stale;
+
+  Thread stalePreventionThread;
+
+  /** refresh a resource that was unused for a long time to prevent it from staling */
+  public void renew(Object o) {}
+
+  /** start a stale prevention thread */
+  public void startStalePreventionThread(long sleepingTime, long staleTime){
+    this.sleeping=sleepingTime;
+    this.stale=staleTime;
+    stalePreventionThread= new StalePreventionThread(poolRef, sleeping);
+    stalePreventionThread.start();
+  }
+
+  /** check for stale resources and renew the rotten ones */
+  protected void renewAll(){
+    synchronized(stack){
+      for(int i=0; i<timeStack.size(); i++){
+	// if the resource can stale by the end of the next sleeping period
+	if(((Date)timeStack.elementAt(i)).getTime() + stale <
+	   (new Date()).getTime()+sleeping) {
+	  org.makumba.MakumbaSystem.getMakumbaLogger("util.pool").fine("renewing resource "+ stack.elementAt(i)+" not used since "+timeStack.elementAt(i));
+	  renew(stack.elementAt(i));
+	  timeStack.setElementAt(new Date(), i);
+	}	    
+      }
+    }
+  } 
+}
+
+/** a thread that wakes up periodically and asks the pool to look for stale resources */
+class StalePreventionThread extends Thread implements Runnable
+{ 
+  // we only keep a weak reference to the pool
+  // otherwise the system (which keeps a reference to every thread)
+  // would not allow the resource pool to be gargage-collected.
+  WeakReference poolRef;
+  long sleeping;
+
+  StalePreventionThread(WeakReference poolRef, long sleeping) {
+    this.poolRef= poolRef;
+    this.sleeping=sleeping;
+  }
+
+  public void run(){
+    while(true){
+      ResourcePool rp= (ResourcePool)poolRef.get();
+      
+      // if the weak reference was cleared, GC and finalization occured, 
+      // so we return
+      if(rp==null)
+	return;
+
+      rp.renewAll();
+      
+      // lose the reference while sleeping to allow for garbage collection of the pool
+      rp=null;
+      
+      try{
+	sleep(sleeping);
+      }catch(InterruptedException e)
+	{
+	  // we've been interrupted due to GC, so we end the thread
+	  return; 
+	}
+    }
   }
 }
